Fix main-content margin on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -742,7 +742,7 @@ text-area,.yui-navset li
   
   #content-wrap
   {
-    margin:4.5em auto 0;
+    margin:1.5em auto 0;
   }
   
   #search-top-box-input,#search-top-box,#navi-bar,#navi-bar-shadow
